[package]
name = "elrem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] } # Updated to latest stable
dialoguer = "0.11.0"
colored = "2.1.0"
walkdir = "2.5.0"
indicatif = "0.17.8"
shellexpand = "3.1.0"
anyhow = "1.0.82"
dirs = "5.0.1" # Added for home directory resolution (needed later, good to add now)
